[gd_scene load_steps=16 format=3 uid="uid://cwnrebbhoaxiw"]

[ext_resource type="Script" path="res://scene.gd" id="1_mhkkh"]
[ext_resource type="Texture2D" uid="uid://dqn6j5sq7cg6c" path="res://assets/Grass_1.png" id="2_pw7ii"]
[ext_resource type="Script" path="res://gold.gd" id="3_35jl7"]
[ext_resource type="PackedScene" uid="uid://cqkfn8shetl2s" path="res://tree.tscn" id="3_jr48v"]
[ext_resource type="Texture2D" uid="uid://6461umvv2huh" path="res://assets/House_Information.png" id="4_bj7lv"]
[ext_resource type="Script" path="res://Camera2D.gd" id="4_l7tpp"]
[ext_resource type="Texture2D" uid="uid://dteordgnapuds" path="res://assets/icon_people_test.png" id="7_m0rfi"]
[ext_resource type="Texture2D" uid="uid://bojxp4pb8ny37" path="res://assets/choose_work_place_status_icon.png" id="8_4lepn"]
[ext_resource type="PackedScene" uid="uid://c8yivcwhel170" path="res://pause_menu.tscn" id="8_a2gus"]
[ext_resource type="Texture2D" uid="uid://crbm56jjfr3ef" path="res://assets/delete_status_icon.png" id="8_njy5j"]
[ext_resource type="Script" path="res://Clock.gd" id="9_3uc32"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_dkwwf"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_fj6eb"]
vertices = PackedVector2Array(5828, 3709, -6067, 3756, -6044, -4064, 5661, -4375)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-6053, -4073, -6077, 3766, 5838, 3718, 5670, -4385)])
source_geometry_group_name = &"navigation_polygon_source_group"
agent_radius = 9.42

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ivjvv"]
texture = ExtResource("2_pw7ii")
texture_region_size = Vector2i(512, 512)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_ookr2"]
tile_size = Vector2i(512, 512)
sources/0 = SubResource("TileSetAtlasSource_ivjvv")

[node name="scene" type="Node2D"]
script = ExtResource("1_mhkkh")

[node name="region" type="NavigationRegion2D" parent="."]
modulate = Color(0, 1, 1, 1)
z_index = 1
material = SubResource("CanvasItemMaterial_dkwwf")
position = Vector2(448, 302)
navigation_polygon = SubResource("NavigationPolygon_fj6eb")
constrain_avoidance = true

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_ookr2")
format = 2
layer_0/tile_data = PackedInt32Array(-65535, 0, 0, -131071, 0, 0, -65536, 0, 0, -1, 0, 0, -2, 0, 0, 65534, 0, 0, 65538, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, -65531, 0, 0, -65532, 0, 0, -65533, 0, 0, -65534, 0, 0, 131070, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 65539, 0, 0, 2, 0, 0, 131074, 0, 0, 131075, 0, 0, 65540, 0, 0, -131072, 0, 0, -65537, 0, 0, -65538, 0, 0, -65539, 0, 0, -65540, 0, 0, -65541, 0, 0, -5, 0, 0, 65531, 0, 0, 65532, 0, 0, 131068, 0, 0, 196604, 0, 0, 196605, 0, 0, 196606, 0, 0, -131070, 0, 0, -196606, 0, 0, -196607, 0, 0, -196608, 0, 0, -3, 0, 0, -4, 0, 0, 65533, 0, 0, 131069, 0, 0, -131068, 0, 0, -196604, 0, 0, -196605, 0, 0, -131069, 0, 0, 131076, 0, 0, 131077, 0, 0, 65541, 0, 0, -131067, 0, 0, -589839, 0, 0, -524303, 0, 0, -458767, 0, 0, -393231, 0, 0, -327695, 0, 0, -262159, 0, 0, -196623, 0, 0, -131087, 0, 0, -65551, 0, 0, -15, 0, 0, 65521, 0, 0, 131057, 0, 0, 196593, 0, 0, 262129, 0, 0, 327665, 0, 0, 393201, 0, 0, 458737, 0, 0, 524273, 0, 0, 589809, 0, 0, 655345, 0, 0, -589838, 0, 0, -524302, 0, 0, -458766, 0, 0, -393230, 0, 0, -327694, 0, 0, -262158, 0, 0, -196622, 0, 0, -131086, 0, 0, -65550, 0, 0, -14, 0, 0, 65522, 0, 0, 131058, 0, 0, 196594, 0, 0, 262130, 0, 0, 327666, 0, 0, 393202, 0, 0, 458738, 0, 0, 524274, 0, 0, 589810, 0, 0, 655346, 0, 0, -589837, 0, 0, -524301, 0, 0, -458765, 0, 0, -393229, 0, 0, -327693, 0, 0, -262157, 0, 0, -196621, 0, 0, -131085, 0, 0, -65549, 0, 0, -13, 0, 0, 65523, 0, 0, 131059, 0, 0, 196595, 0, 0, 262131, 0, 0, 327667, 0, 0, 393203, 0, 0, 458739, 0, 0, 524275, 0, 0, 589811, 0, 0, 655347, 0, 0, -589836, 0, 0, -524300, 0, 0, -458764, 0, 0, -393228, 0, 0, -327692, 0, 0, -262156, 0, 0, -196620, 0, 0, -131084, 0, 0, -65548, 0, 0, -12, 0, 0, 65524, 0, 0, 131060, 0, 0, 196596, 0, 0, 262132, 0, 0, 327668, 0, 0, 393204, 0, 0, 458740, 0, 0, 524276, 0, 0, 589812, 0, 0, 655348, 0, 0, -589835, 0, 0, -524299, 0, 0, -458763, 0, 0, -393227, 0, 0, -327691, 0, 0, -262155, 0, 0, -196619, 0, 0, -131083, 0, 0, -65547, 0, 0, -11, 0, 0, 65525, 0, 0, 131061, 0, 0, 196597, 0, 0, 262133, 0, 0, 327669, 0, 0, 393205, 0, 0, 458741, 0, 0, 524277, 0, 0, 589813, 0, 0, 655349, 0, 0, -589834, 0, 0, -524298, 0, 0, -458762, 0, 0, -393226, 0, 0, -327690, 0, 0, -262154, 0, 0, -196618, 0, 0, -131082, 0, 0, -65546, 0, 0, -10, 0, 0, 65526, 0, 0, 131062, 0, 0, 196598, 0, 0, 262134, 0, 0, 327670, 0, 0, 393206, 0, 0, 458742, 0, 0, 524278, 0, 0, 589814, 0, 0, 655350, 0, 0, -589833, 0, 0, -524297, 0, 0, -458761, 0, 0, -393225, 0, 0, -327689, 0, 0, -262153, 0, 0, -196617, 0, 0, -131081, 0, 0, -65545, 0, 0, -9, 0, 0, 65527, 0, 0, 131063, 0, 0, 196599, 0, 0, 262135, 0, 0, 327671, 0, 0, 393207, 0, 0, 458743, 0, 0, 524279, 0, 0, 589815, 0, 0, 655351, 0, 0, -589832, 0, 0, -524296, 0, 0, -458760, 0, 0, -393224, 0, 0, -327688, 0, 0, -262152, 0, 0, -196616, 0, 0, -131080, 0, 0, -65544, 0, 0, -8, 0, 0, 65528, 0, 0, 131064, 0, 0, 196600, 0, 0, 262136, 0, 0, 327672, 0, 0, 393208, 0, 0, 458744, 0, 0, 524280, 0, 0, 589816, 0, 0, 655352, 0, 0, -589831, 0, 0, -524295, 0, 0, -458759, 0, 0, -393223, 0, 0, -327687, 0, 0, -262151, 0, 0, -196615, 0, 0, -131079, 0, 0, -65543, 0, 0, -7, 0, 0, 65529, 0, 0, 131065, 0, 0, 196601, 0, 0, 262137, 0, 0, 327673, 0, 0, 393209, 0, 0, 458745, 0, 0, 524281, 0, 0, 589817, 0, 0, 655353, 0, 0, -589830, 0, 0, -524294, 0, 0, -458758, 0, 0, -393222, 0, 0, -327686, 0, 0, -262150, 0, 0, -196614, 0, 0, -131078, 0, 0, -65542, 0, 0, -6, 0, 0, 65530, 0, 0, 131066, 0, 0, 196602, 0, 0, 262138, 0, 0, 327674, 0, 0, 393210, 0, 0, 458746, 0, 0, 524282, 0, 0, 589818, 0, 0, 655354, 0, 0, -589829, 0, 0, -524293, 0, 0, -458757, 0, 0, -393221, 0, 0, -327685, 0, 0, -262149, 0, 0, -196613, 0, 0, -131077, 0, 0, 131067, 0, 0, 196603, 0, 0, 262139, 0, 0, 327675, 0, 0, 393211, 0, 0, 458747, 0, 0, 524283, 0, 0, 589819, 0, 0, 655355, 0, 0, -589828, 0, 0, -524292, 0, 0, -458756, 0, 0, -393220, 0, 0, -327684, 0, 0, -262148, 0, 0, -196612, 0, 0, -131076, 0, 0, 262140, 0, 0, 327676, 0, 0, 393212, 0, 0, 458748, 0, 0, 524284, 0, 0, 589820, 0, 0, 655356, 0, 0, -589827, 0, 0, -524291, 0, 0, -458755, 0, 0, -393219, 0, 0, -327683, 0, 0, -262147, 0, 0, -196611, 0, 0, -131075, 0, 0, 262141, 0, 0, 327677, 0, 0, 393213, 0, 0, 458749, 0, 0, 524285, 0, 0, 589821, 0, 0, 655357, 0, 0, -589826, 0, 0, -524290, 0, 0, -458754, 0, 0, -393218, 0, 0, -327682, 0, 0, -262146, 0, 0, -196610, 0, 0, -131074, 0, 0, 262142, 0, 0, 327678, 0, 0, 393214, 0, 0, 458750, 0, 0, 524286, 0, 0, 589822, 0, 0, 655358, 0, 0, -589825, 0, 0, -524289, 0, 0, -458753, 0, 0, -393217, 0, 0, -327681, 0, 0, -262145, 0, 0, -196609, 0, 0, -131073, 0, 0, 262143, 0, 0, 327679, 0, 0, 393215, 0, 0, 458751, 0, 0, 524287, 0, 0, 589823, 0, 0, 655359, 0, 0, -655360, 0, 0, -589824, 0, 0, -524288, 0, 0, -458752, 0, 0, -393216, 0, 0, -327680, 0, 0, -262144, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, -655359, 0, 0, -589823, 0, 0, -524287, 0, 0, -458751, 0, 0, -393215, 0, 0, -327679, 0, 0, -262143, 0, 0, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 0, 0, 458753, 0, 0, 524289, 0, 0, 589825, 0, 0, -655358, 0, 0, -589822, 0, 0, -524286, 0, 0, -458750, 0, 0, -393214, 0, 0, -327678, 0, 0, -262142, 0, 0, 196610, 0, 0, 262146, 0, 0, 327682, 0, 0, 393218, 0, 0, 458754, 0, 0, 524290, 0, 0, 589826, 0, 0, -655357, 0, 0, -589821, 0, 0, -524285, 0, 0, -458749, 0, 0, -393213, 0, 0, -327677, 0, 0, -262141, 0, 0, 196611, 0, 0, 262147, 0, 0, 327683, 0, 0, 393219, 0, 0, 458755, 0, 0, 524291, 0, 0, 589827, 0, 0, -655356, 0, 0, -589820, 0, 0, -524284, 0, 0, -458748, 0, 0, -393212, 0, 0, -327676, 0, 0, -262140, 0, 0, 196612, 0, 0, 262148, 0, 0, 327684, 0, 0, 393220, 0, 0, 458756, 0, 0, 524292, 0, 0, 589828, 0, 0, -655355, 0, 0, -589819, 0, 0, -524283, 0, 0, -458747, 0, 0, -393211, 0, 0, -327675, 0, 0, -262139, 0, 0, -196603, 0, 0, 196613, 0, 0, 262149, 0, 0, 327685, 0, 0, 393221, 0, 0, 458757, 0, 0, 524293, 0, 0, 589829, 0, 0, -655354, 0, 0, -589818, 0, 0, -524282, 0, 0, -458746, 0, 0, -393210, 0, 0, -327674, 0, 0, -262138, 0, 0, -196602, 0, 0, -131066, 0, 0, -65530, 0, 0, 6, 0, 0, 65542, 0, 0, 131078, 0, 0, 196614, 0, 0, 262150, 0, 0, 327686, 0, 0, 393222, 0, 0, 458758, 0, 0, 524294, 0, 0, 589830, 0, 0, -655353, 0, 0, -589817, 0, 0, -524281, 0, 0, -458745, 0, 0, -393209, 0, 0, -327673, 0, 0, -262137, 0, 0, -196601, 0, 0, -131065, 0, 0, -65529, 0, 0, 7, 0, 0, 65543, 0, 0, 131079, 0, 0, 196615, 0, 0, 262151, 0, 0, 327687, 0, 0, 393223, 0, 0, 458759, 0, 0, 524295, 0, 0, 589831, 0, 0, -655352, 0, 0, -589816, 0, 0, -524280, 0, 0, -458744, 0, 0, -393208, 0, 0, -327672, 0, 0, -262136, 0, 0, -196600, 0, 0, -131064, 0, 0, -65528, 0, 0, 8, 0, 0, 65544, 0, 0, 131080, 0, 0, 196616, 0, 0, 262152, 0, 0, 327688, 0, 0, 393224, 0, 0, 458760, 0, 0, 524296, 0, 0, 589832, 0, 0, -655351, 0, 0, -589815, 0, 0, -524279, 0, 0, -458743, 0, 0, -393207, 0, 0, -327671, 0, 0, -262135, 0, 0, -196599, 0, 0, -131063, 0, 0, -65527, 0, 0, 9, 0, 0, 65545, 0, 0, 131081, 0, 0, 196617, 0, 0, 262153, 0, 0, 327689, 0, 0, 393225, 0, 0, 458761, 0, 0, 524297, 0, 0, 589833, 0, 0, -655350, 0, 0, -589814, 0, 0, -524278, 0, 0, -458742, 0, 0, -393206, 0, 0, -327670, 0, 0, -262134, 0, 0, -196598, 0, 0, -131062, 0, 0, -65526, 0, 0, 10, 0, 0, 65546, 0, 0, 131082, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, 393226, 0, 0, 458762, 0, 0, 524298, 0, 0, 589834, 0, 0, -655349, 0, 0, -589813, 0, 0, -524277, 0, 0, -458741, 0, 0, -393205, 0, 0, -327669, 0, 0, -262133, 0, 0, -196597, 0, 0, -131061, 0, 0, -65525, 0, 0, 11, 0, 0, 65547, 0, 0, 131083, 0, 0, 196619, 0, 0, 262155, 0, 0, 327691, 0, 0, 393227, 0, 0, 458763, 0, 0, 524299, 0, 0, 589835, 0, 0, -655348, 0, 0, -589812, 0, 0, -524276, 0, 0, -458740, 0, 0, -393204, 0, 0, -327668, 0, 0, -262132, 0, 0, -196596, 0, 0, -131060, 0, 0, -65524, 0, 0, 12, 0, 0, 65548, 0, 0, 131084, 0, 0, 196620, 0, 0, 262156, 0, 0, 327692, 0, 0, 393228, 0, 0, 458764, 0, 0, 524300, 0, 0, 589836, 0, 0, -655347, 0, 0, -589811, 0, 0, -524275, 0, 0, -458739, 0, 0, -393203, 0, 0, -327667, 0, 0, -262131, 0, 0, -196595, 0, 0, -131059, 0, 0, -65523, 0, 0, 13, 0, 0, 65549, 0, 0, 131085, 0, 0, 196621, 0, 0, 262157, 0, 0, 327693, 0, 0, 393229, 0, 0, 458765, 0, 0, 524301, 0, 0, 589837, 0, 0, -655346, 0, 0, -589810, 0, 0, -524274, 0, 0, -458738, 0, 0, -393202, 0, 0, -327666, 0, 0, -262130, 0, 0, -196594, 0, 0, -131058, 0, 0, -65522, 0, 0, 14, 0, 0, 65550, 0, 0, 131086, 0, 0, 196622, 0, 0, 262158, 0, 0, 327694, 0, 0, 393230, 0, 0, 458766, 0, 0, 524302, 0, 0, 589838, 0, 0, 65535, 0, 0, 131071, 0, 0, 0, 0, 0, 1, 0, 0, 65536, 0, 0, 65537, 0, 0)

[node name="Houses" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="pause_menu" parent="CanvasLayer" instance=ExtResource("8_a2gus")]
visible = false

[node name="Button" type="Button" parent="CanvasLayer"]
offset_left = 6.0
offset_top = 1013.0
offset_right = 149.0
offset_bottom = 1066.0
text = "House"

[node name="gold" type="Label" parent="CanvasLayer"]
offset_left = 1800.0
offset_right = 1976.0
offset_bottom = 73.0
theme_override_font_sizes/font_size = 44
text = "1000
"
script = ExtResource("3_35jl7")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
visible = false
position = Vector2(1752, 954)
scale = Vector2(0.806, 0.732803)
texture = ExtResource("4_bj7lv")

[node name="Label" type="Label" parent="CanvasLayer/Sprite2D"]
offset_left = -419.0
offset_top = -220.0
offset_right = 277.0
offset_bottom = -43.0
theme_override_font_sizes/font_size = 81
text = "0
"

[node name="Button2" type="Button" parent="CanvasLayer"]
offset_left = 187.0
offset_top = 1010.0
offset_right = 329.0
offset_bottom = 1063.0
text = "Field
"

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer"]
visible = false
offset_left = 50.0
offset_top = 168.0
offset_right = 346.0
offset_bottom = 406.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ScrollContainer"]
layout_mode = 2

[node name="ScrollContainer2" type="ScrollContainer" parent="CanvasLayer"]
visible = false
offset_left = 49.0
offset_top = 232.0
offset_right = 349.0
offset_bottom = 481.0

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/ScrollContainer2"]
layout_mode = 2

[node name="ScrollContainer3" type="ScrollContainer" parent="CanvasLayer"]
visible = false
offset_left = 50.0
offset_top = 234.0
offset_right = 351.0
offset_bottom = 475.0

[node name="VBoxContainer3" type="VBoxContainer" parent="CanvasLayer/ScrollContainer3"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="CanvasLayer"]
offset_top = 168.0
offset_right = 52.0
offset_bottom = 218.0
texture_normal = ExtResource("7_m0rfi")

[node name="TextureButton2" type="TextureButton" parent="CanvasLayer"]
offset_left = -1.0
offset_top = 233.0
offset_right = 51.0
offset_bottom = 283.0
texture_normal = ExtResource("7_m0rfi")
flip_h = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
visible = false
offset_left = 911.0
offset_top = 1028.0
offset_right = 951.0
offset_bottom = 1068.0
texture = ExtResource("8_njy5j")

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer"]
visible = false
offset_left = 964.0
offset_top = 1028.0
offset_right = 1004.0
offset_bottom = 1068.0
texture = ExtResource("8_4lepn")

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 764.0
offset_top = 7.0
offset_right = 1225.0
offset_bottom = 77.0

[node name="Clock" type="Timer" parent="CanvasLayer/Label"]
wait_time = 2.0
autostart = true
script = ExtResource("9_3uc32")

[node name="Button3" type="Button" parent="CanvasLayer"]
offset_left = 366.0
offset_top = 1011.0
offset_right = 509.0
offset_bottom = 1064.0
text = "G_House
"

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("4_l7tpp")

[node name="Trees" type="Node2D" parent="."]

[node name="tree5" parent="Trees" instance=ExtResource("3_jr48v")]
position = Vector2(-920, -101)

[node name="tree6" parent="Trees" instance=ExtResource("3_jr48v")]
position = Vector2(-142, -739)

[node name="tree7" parent="Trees" instance=ExtResource("3_jr48v")]
position = Vector2(-1544, 1098)

[node name="tree8" parent="Trees" instance=ExtResource("3_jr48v")]
position = Vector2(-608, 562)

[node name="tree9" parent="Trees" instance=ExtResource("3_jr48v")]
position = Vector2(-1512, -406)

[node name="tree10" parent="Trees" instance=ExtResource("3_jr48v")]
position = Vector2(992, -718)

[node name="tree11" parent="Trees" instance=ExtResource("3_jr48v")]
position = Vector2(259, -139)

[node name="tree12" parent="Trees" instance=ExtResource("3_jr48v")]
position = Vector2(-976, -1526)

[node name="tree13" parent="Trees" instance=ExtResource("3_jr48v")]
position = Vector2(2456, -390)

[node name="tree14" parent="Trees" instance=ExtResource("3_jr48v")]
position = Vector2(1032, 1306)

[node name="tree15" parent="Trees" instance=ExtResource("3_jr48v")]
position = Vector2(-232, 1410)

[node name="tree2" parent="Trees" instance=ExtResource("3_jr48v")]
position = Vector2(115, 396)

[node name="tree3" parent="Trees" instance=ExtResource("3_jr48v")]
position = Vector2(809, 358)

[node name="tree4" parent="Trees" instance=ExtResource("3_jr48v")]
position = Vector2(774, 134)

[node name="People" type="Node2D" parent="."]

[node name="Fields" type="Node2D" parent="."]

[connection signal="mouse_entered" from="CanvasLayer/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Button2" to="." method="_on_button_2_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Button2" to="." method="_on_button_2_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="CanvasLayer/TextureButton2" to="." method="_on_texture_button_2_pressed"]
[connection signal="timeout" from="CanvasLayer/Label/Clock" to="CanvasLayer/Label/Clock" method="_on_timeout"]
[connection signal="pressed" from="CanvasLayer/Button3" to="." method="_on_button_3_pressed"]
